--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "deploy": "./deploy"
+    "deploy": "./deploy.sh"
   },
   "jest": {
     "collectCoverageFrom": [
